#
# Copyright (c) 2017-2019 THL A29 Limited, a Tencent company. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

set(sqlserver_public_header
  include/tencentcloud/sqlserver/v20180328/SqlserverClient.h
  )

set(sqlserver_public_header_model
  include/tencentcloud/sqlserver/v20180328/model/CreateDBInstancesRequest.h
  include/tencentcloud/sqlserver/v20180328/model/CloneDBResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DealInfo.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyDBEncryptAttributesResponse.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyBackupStrategyRequest.h
  include/tencentcloud/sqlserver/v20180328/model/RestoreInstanceRequest.h
  include/tencentcloud/sqlserver/v20180328/model/CreateBasicDBInstancesResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeAccountsRequest.h
  include/tencentcloud/sqlserver/v20180328/model/CreateBusinessIntelligenceFileRequest.h
  include/tencentcloud/sqlserver/v20180328/model/CreateMigrationResponse.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyDReadableRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DeleteBackupMigrationRequest.h
  include/tencentcloud/sqlserver/v20180328/model/RestartDBInstanceRequest.h
  include/tencentcloud/sqlserver/v20180328/model/CreateCloudDBInstancesResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DeleteBusinessIntelligenceFileRequest.h
  include/tencentcloud/sqlserver/v20180328/model/CreateBusinessDBInstancesResponse.h
  include/tencentcloud/sqlserver/v20180328/model/StartBackupMigrationResponse.h
  include/tencentcloud/sqlserver/v20180328/model/RegionInfo.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyBackupStrategyResponse.h
  include/tencentcloud/sqlserver/v20180328/model/SlaveZones.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyIncrementalMigrationRequest.h
  include/tencentcloud/sqlserver/v20180328/model/StartInstanceXEventResponse.h
  include/tencentcloud/sqlserver/v20180328/model/MigrateDetail.h
  include/tencentcloud/sqlserver/v20180328/model/CreateIncrementalMigrationRequest.h
  include/tencentcloud/sqlserver/v20180328/model/RunMigrationRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeDBInstanceInterResponse.h
  include/tencentcloud/sqlserver/v20180328/model/CreateBusinessIntelligenceFileResponse.h
  include/tencentcloud/sqlserver/v20180328/model/OpenInterCommunicationRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeProductConfigRequest.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyDBEncryptAttributesRequest.h
  include/tencentcloud/sqlserver/v20180328/model/CreateAccountRequest.h
  include/tencentcloud/sqlserver/v20180328/model/ParamRecord.h
  include/tencentcloud/sqlserver/v20180328/model/RollbackInstanceResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DeleteIncrementalMigrationRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DBRemark.h
  include/tencentcloud/sqlserver/v20180328/model/CloseInterCommunicationRequest.h
  include/tencentcloud/sqlserver/v20180328/model/MigrateDB.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeRegionsResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeBackupsRequest.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyDBInstanceProjectResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeRollbackTimeResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeInstanceParamRecordsResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeIncrementalMigrationRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DeleteBusinessIntelligenceFileResponse.h
  include/tencentcloud/sqlserver/v20180328/model/ParameterDetail.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeInstanceByOrdersRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeBusinessIntelligenceFileResponse.h
  include/tencentcloud/sqlserver/v20180328/model/ZoneInfo.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeXEventsRequest.h
  include/tencentcloud/sqlserver/v20180328/model/CrossRegionStatus.h
  include/tencentcloud/sqlserver/v20180328/model/Migration.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyDBInstanceNetworkRequest.h
  include/tencentcloud/sqlserver/v20180328/model/MigrationDetail.h
  include/tencentcloud/sqlserver/v20180328/model/SSLConfig.h
  include/tencentcloud/sqlserver/v20180328/model/RecycleDBInstanceRequest.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyInstanceEncryptAttributesRequest.h
  include/tencentcloud/sqlserver/v20180328/model/BusinessIntelligenceFile.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeFlowStatusRequest.h
  include/tencentcloud/sqlserver/v20180328/model/ResetAccountPasswordResponse.h
  include/tencentcloud/sqlserver/v20180328/model/MigrateTask.h
  include/tencentcloud/sqlserver/v20180328/model/SpecInfo.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeOrdersResponse.h
  include/tencentcloud/sqlserver/v20180328/model/InquiryPriceCreateDBInstancesResponse.h
  include/tencentcloud/sqlserver/v20180328/model/OpenInterCommunicationResponse.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyAccountPrivilegeResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DBCreateInfo.h
  include/tencentcloud/sqlserver/v20180328/model/InquiryPriceCreateDBInstancesRequest.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyMigrationResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeZonesResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeDBsResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeDBInstancesRequest.h
  include/tencentcloud/sqlserver/v20180328/model/CreateCloudReadOnlyDBInstancesRequest.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyInstanceEncryptAttributesResponse.h
  include/tencentcloud/sqlserver/v20180328/model/MigrationStep.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyAccountRemarkResponse.h
  include/tencentcloud/sqlserver/v20180328/model/Events.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeMigrationsResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeBackupFilesResponse.h
  include/tencentcloud/sqlserver/v20180328/model/UpgradeDBInstanceRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeZonesRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DeleteDBRequest.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyInstanceParamRequest.h
  include/tencentcloud/sqlserver/v20180328/model/MigrateSource.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyDatabaseCTRequest.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyBackupMigrationResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeFlowStatusResponse.h
  include/tencentcloud/sqlserver/v20180328/model/TDEConfigAttribute.h
  include/tencentcloud/sqlserver/v20180328/model/CreateReadOnlyDBInstancesRequest.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyAccountPrivilegeRequest.h
  include/tencentcloud/sqlserver/v20180328/model/CreateBackupMigrationRequest.h
  include/tencentcloud/sqlserver/v20180328/model/StartIncrementalMigrationRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeXEventsResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeDBsNormalResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeMigrationsRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DealInstance.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeDBCharsetsRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeInstanceParamRecordsRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeDBsRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeInstanceByOrdersResponse.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyDatabaseMdfRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DeleteIncrementalMigrationResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeRegionsRequest.h
  include/tencentcloud/sqlserver/v20180328/model/AccountPrivilege.h
  include/tencentcloud/sqlserver/v20180328/model/CreateReadOnlyDBInstancesResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DeleteMigrationRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeInstanceParamsRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeMigrationDetailRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DBPrivilegeModifyInfo.h
  include/tencentcloud/sqlserver/v20180328/model/TerminateDBInstanceRequest.h
  include/tencentcloud/sqlserver/v20180328/model/CreateDBRequest.h
  include/tencentcloud/sqlserver/v20180328/model/EventConfig.h
  include/tencentcloud/sqlserver/v20180328/model/InstanceDBDetail.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeBackupFilesRequest.h
  include/tencentcloud/sqlserver/v20180328/model/RenameRestoreDatabase.h
  include/tencentcloud/sqlserver/v20180328/model/InquiryPriceUpgradeDBInstanceRequest.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyDBRemarkRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeBusinessIntelligenceFileRequest.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyDBInstanceNameRequest.h
  include/tencentcloud/sqlserver/v20180328/model/AccountPassword.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeSlowlogsRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DeleteMigrationResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeBackupMigrationRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeBackupUploadSizeResponse.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyDatabaseCDCRequest.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyInstanceParamResponse.h
  include/tencentcloud/sqlserver/v20180328/model/StartIncrementalMigrationResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeRestoreTimeRangeRequest.h
  include/tencentcloud/sqlserver/v20180328/model/InterInstanceFlow.h
  include/tencentcloud/sqlserver/v20180328/model/DbRollbackTimeInfo.h
  include/tencentcloud/sqlserver/v20180328/model/CreateCloudReadOnlyDBInstancesResponse.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyDBInstanceNetworkResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DbNormalDetail.h
  include/tencentcloud/sqlserver/v20180328/model/AccountDetail.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyDatabaseMdfResponse.h
  include/tencentcloud/sqlserver/v20180328/model/CreateBackupResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DBInstance.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeProductConfigResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeRollbackTimeRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DBTDEEncrypt.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeUploadBackupInfoResponse.h
  include/tencentcloud/sqlserver/v20180328/model/CreateMigrationRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeDBInstanceInterRequest.h
  include/tencentcloud/sqlserver/v20180328/model/InterInstance.h
  include/tencentcloud/sqlserver/v20180328/model/CreateBasicDBInstancesRequest.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyDBNameResponse.h
  include/tencentcloud/sqlserver/v20180328/model/CosUploadBackupFile.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyDBNameRequest.h
  include/tencentcloud/sqlserver/v20180328/model/StartBackupMigrationRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeDBInstancesAttributeResponse.h
  include/tencentcloud/sqlserver/v20180328/model/Backup.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeRestoreTimeRangeResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeBackupCommandRequest.h
  include/tencentcloud/sqlserver/v20180328/model/AccountRemark.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyDatabaseCDCResponse.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyDBInstanceNameResponse.h
  include/tencentcloud/sqlserver/v20180328/model/CreateIncrementalMigrationResponse.h
  include/tencentcloud/sqlserver/v20180328/model/RunMigrationResponse.h
  include/tencentcloud/sqlserver/v20180328/model/AccountPrivilegeModifyInfo.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeBackupMigrationResponse.h
  include/tencentcloud/sqlserver/v20180328/model/AccountCreateInfo.h
  include/tencentcloud/sqlserver/v20180328/model/StartInstanceXEventRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DBPrivilege.h
  include/tencentcloud/sqlserver/v20180328/model/FileAction.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeOrdersRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeBackupsResponse.h
  include/tencentcloud/sqlserver/v20180328/model/ResourceTag.h
  include/tencentcloud/sqlserver/v20180328/model/CreateBackupMigrationResponse.h
  include/tencentcloud/sqlserver/v20180328/model/RecycleDBInstanceResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DeleteAccountRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DeleteBackupMigrationResponse.h
  include/tencentcloud/sqlserver/v20180328/model/CreateBackupRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeDBsNormalRequest.h
  include/tencentcloud/sqlserver/v20180328/model/BackupFile.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyAccountRemarkRequest.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyIncrementalMigrationResponse.h
  include/tencentcloud/sqlserver/v20180328/model/OldVip.h
  include/tencentcloud/sqlserver/v20180328/model/MigrationAction.h
  include/tencentcloud/sqlserver/v20180328/model/InquiryPriceUpgradeDBInstanceResponse.h
  include/tencentcloud/sqlserver/v20180328/model/CloneDBRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeMigrationDetailResponse.h
  include/tencentcloud/sqlserver/v20180328/model/UpgradeDBInstanceResponse.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyMigrationRequest.h
  include/tencentcloud/sqlserver/v20180328/model/CrossBackupAddr.h
  include/tencentcloud/sqlserver/v20180328/model/Parameter.h
  include/tencentcloud/sqlserver/v20180328/model/CreateAccountResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeBackupUploadSizeRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DeleteDBResponse.h
  include/tencentcloud/sqlserver/v20180328/model/CreateDBResponse.h
  include/tencentcloud/sqlserver/v20180328/model/CloseInterCommunicationResponse.h
  include/tencentcloud/sqlserver/v20180328/model/RestartDBInstanceResponse.h
  include/tencentcloud/sqlserver/v20180328/model/CreateBusinessDBInstancesRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeDBInstancesResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeSlowlogsResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DBDetail.h
  include/tencentcloud/sqlserver/v20180328/model/ResetAccountPasswordRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeInstanceParamsResponse.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyDReadableResponse.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyDBInstanceProjectRequest.h
  include/tencentcloud/sqlserver/v20180328/model/SlowLog.h
  include/tencentcloud/sqlserver/v20180328/model/DBRenameRes.h
  include/tencentcloud/sqlserver/v20180328/model/TerminateDBInstanceResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeUploadBackupInfoRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeAccountsResponse.h
  include/tencentcloud/sqlserver/v20180328/model/RollbackInstanceRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeDBInstancesAttributeRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DrReadableInfo.h
  include/tencentcloud/sqlserver/v20180328/model/RestoreInstanceResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeBackupCommandResponse.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyDatabaseCTResponse.h
  include/tencentcloud/sqlserver/v20180328/model/CreateCloudDBInstancesRequest.h
  include/tencentcloud/sqlserver/v20180328/model/SlowlogInfo.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeIncrementalMigrationResponse.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyDBRemarkResponse.h
  include/tencentcloud/sqlserver/v20180328/model/MigrateTarget.h
  include/tencentcloud/sqlserver/v20180328/model/CreateDBInstancesResponse.h
  include/tencentcloud/sqlserver/v20180328/model/ModifyBackupMigrationRequest.h
  include/tencentcloud/sqlserver/v20180328/model/DeleteAccountResponse.h
  include/tencentcloud/sqlserver/v20180328/model/DescribeDBCharsetsResponse.h
  )

set(sqlserver_src
  src/v20180328/SqlserverClient.cpp
  src/v20180328/model/CreateDBInstancesRequest.cpp
  src/v20180328/model/CloneDBResponse.cpp
  src/v20180328/model/DealInfo.cpp
  src/v20180328/model/ModifyDBEncryptAttributesResponse.cpp
  src/v20180328/model/ModifyBackupStrategyRequest.cpp
  src/v20180328/model/RestoreInstanceRequest.cpp
  src/v20180328/model/CreateBasicDBInstancesResponse.cpp
  src/v20180328/model/DescribeAccountsRequest.cpp
  src/v20180328/model/CreateBusinessIntelligenceFileRequest.cpp
  src/v20180328/model/CreateMigrationResponse.cpp
  src/v20180328/model/ModifyDReadableRequest.cpp
  src/v20180328/model/DeleteBackupMigrationRequest.cpp
  src/v20180328/model/RestartDBInstanceRequest.cpp
  src/v20180328/model/CreateCloudDBInstancesResponse.cpp
  src/v20180328/model/DeleteBusinessIntelligenceFileRequest.cpp
  src/v20180328/model/CreateBusinessDBInstancesResponse.cpp
  src/v20180328/model/StartBackupMigrationResponse.cpp
  src/v20180328/model/RegionInfo.cpp
  src/v20180328/model/ModifyBackupStrategyResponse.cpp
  src/v20180328/model/SlaveZones.cpp
  src/v20180328/model/ModifyIncrementalMigrationRequest.cpp
  src/v20180328/model/StartInstanceXEventResponse.cpp
  src/v20180328/model/MigrateDetail.cpp
  src/v20180328/model/CreateIncrementalMigrationRequest.cpp
  src/v20180328/model/RunMigrationRequest.cpp
  src/v20180328/model/DescribeDBInstanceInterResponse.cpp
  src/v20180328/model/CreateBusinessIntelligenceFileResponse.cpp
  src/v20180328/model/OpenInterCommunicationRequest.cpp
  src/v20180328/model/DescribeProductConfigRequest.cpp
  src/v20180328/model/ModifyDBEncryptAttributesRequest.cpp
  src/v20180328/model/CreateAccountRequest.cpp
  src/v20180328/model/ParamRecord.cpp
  src/v20180328/model/RollbackInstanceResponse.cpp
  src/v20180328/model/DeleteIncrementalMigrationRequest.cpp
  src/v20180328/model/DBRemark.cpp
  src/v20180328/model/CloseInterCommunicationRequest.cpp
  src/v20180328/model/MigrateDB.cpp
  src/v20180328/model/DescribeRegionsResponse.cpp
  src/v20180328/model/DescribeBackupsRequest.cpp
  src/v20180328/model/ModifyDBInstanceProjectResponse.cpp
  src/v20180328/model/DescribeRollbackTimeResponse.cpp
  src/v20180328/model/DescribeInstanceParamRecordsResponse.cpp
  src/v20180328/model/DescribeIncrementalMigrationRequest.cpp
  src/v20180328/model/DeleteBusinessIntelligenceFileResponse.cpp
  src/v20180328/model/ParameterDetail.cpp
  src/v20180328/model/DescribeInstanceByOrdersRequest.cpp
  src/v20180328/model/DescribeBusinessIntelligenceFileResponse.cpp
  src/v20180328/model/ZoneInfo.cpp
  src/v20180328/model/DescribeXEventsRequest.cpp
  src/v20180328/model/CrossRegionStatus.cpp
  src/v20180328/model/Migration.cpp
  src/v20180328/model/ModifyDBInstanceNetworkRequest.cpp
  src/v20180328/model/MigrationDetail.cpp
  src/v20180328/model/SSLConfig.cpp
  src/v20180328/model/RecycleDBInstanceRequest.cpp
  src/v20180328/model/ModifyInstanceEncryptAttributesRequest.cpp
  src/v20180328/model/BusinessIntelligenceFile.cpp
  src/v20180328/model/DescribeFlowStatusRequest.cpp
  src/v20180328/model/ResetAccountPasswordResponse.cpp
  src/v20180328/model/MigrateTask.cpp
  src/v20180328/model/SpecInfo.cpp
  src/v20180328/model/DescribeOrdersResponse.cpp
  src/v20180328/model/InquiryPriceCreateDBInstancesResponse.cpp
  src/v20180328/model/OpenInterCommunicationResponse.cpp
  src/v20180328/model/ModifyAccountPrivilegeResponse.cpp
  src/v20180328/model/DBCreateInfo.cpp
  src/v20180328/model/InquiryPriceCreateDBInstancesRequest.cpp
  src/v20180328/model/ModifyMigrationResponse.cpp
  src/v20180328/model/DescribeZonesResponse.cpp
  src/v20180328/model/DescribeDBsResponse.cpp
  src/v20180328/model/DescribeDBInstancesRequest.cpp
  src/v20180328/model/CreateCloudReadOnlyDBInstancesRequest.cpp
  src/v20180328/model/ModifyInstanceEncryptAttributesResponse.cpp
  src/v20180328/model/MigrationStep.cpp
  src/v20180328/model/ModifyAccountRemarkResponse.cpp
  src/v20180328/model/Events.cpp
  src/v20180328/model/DescribeMigrationsResponse.cpp
  src/v20180328/model/DescribeBackupFilesResponse.cpp
  src/v20180328/model/UpgradeDBInstanceRequest.cpp
  src/v20180328/model/DescribeZonesRequest.cpp
  src/v20180328/model/DeleteDBRequest.cpp
  src/v20180328/model/ModifyInstanceParamRequest.cpp
  src/v20180328/model/MigrateSource.cpp
  src/v20180328/model/ModifyDatabaseCTRequest.cpp
  src/v20180328/model/ModifyBackupMigrationResponse.cpp
  src/v20180328/model/DescribeFlowStatusResponse.cpp
  src/v20180328/model/TDEConfigAttribute.cpp
  src/v20180328/model/CreateReadOnlyDBInstancesRequest.cpp
  src/v20180328/model/ModifyAccountPrivilegeRequest.cpp
  src/v20180328/model/CreateBackupMigrationRequest.cpp
  src/v20180328/model/StartIncrementalMigrationRequest.cpp
  src/v20180328/model/DescribeXEventsResponse.cpp
  src/v20180328/model/DescribeDBsNormalResponse.cpp
  src/v20180328/model/DescribeMigrationsRequest.cpp
  src/v20180328/model/DealInstance.cpp
  src/v20180328/model/DescribeDBCharsetsRequest.cpp
  src/v20180328/model/DescribeInstanceParamRecordsRequest.cpp
  src/v20180328/model/DescribeDBsRequest.cpp
  src/v20180328/model/DescribeInstanceByOrdersResponse.cpp
  src/v20180328/model/ModifyDatabaseMdfRequest.cpp
  src/v20180328/model/DeleteIncrementalMigrationResponse.cpp
  src/v20180328/model/DescribeRegionsRequest.cpp
  src/v20180328/model/AccountPrivilege.cpp
  src/v20180328/model/CreateReadOnlyDBInstancesResponse.cpp
  src/v20180328/model/DeleteMigrationRequest.cpp
  src/v20180328/model/DescribeInstanceParamsRequest.cpp
  src/v20180328/model/DescribeMigrationDetailRequest.cpp
  src/v20180328/model/DBPrivilegeModifyInfo.cpp
  src/v20180328/model/TerminateDBInstanceRequest.cpp
  src/v20180328/model/CreateDBRequest.cpp
  src/v20180328/model/EventConfig.cpp
  src/v20180328/model/InstanceDBDetail.cpp
  src/v20180328/model/DescribeBackupFilesRequest.cpp
  src/v20180328/model/RenameRestoreDatabase.cpp
  src/v20180328/model/InquiryPriceUpgradeDBInstanceRequest.cpp
  src/v20180328/model/ModifyDBRemarkRequest.cpp
  src/v20180328/model/DescribeBusinessIntelligenceFileRequest.cpp
  src/v20180328/model/ModifyDBInstanceNameRequest.cpp
  src/v20180328/model/AccountPassword.cpp
  src/v20180328/model/DescribeSlowlogsRequest.cpp
  src/v20180328/model/DeleteMigrationResponse.cpp
  src/v20180328/model/DescribeBackupMigrationRequest.cpp
  src/v20180328/model/DescribeBackupUploadSizeResponse.cpp
  src/v20180328/model/ModifyDatabaseCDCRequest.cpp
  src/v20180328/model/ModifyInstanceParamResponse.cpp
  src/v20180328/model/StartIncrementalMigrationResponse.cpp
  src/v20180328/model/DescribeRestoreTimeRangeRequest.cpp
  src/v20180328/model/InterInstanceFlow.cpp
  src/v20180328/model/DbRollbackTimeInfo.cpp
  src/v20180328/model/CreateCloudReadOnlyDBInstancesResponse.cpp
  src/v20180328/model/ModifyDBInstanceNetworkResponse.cpp
  src/v20180328/model/DbNormalDetail.cpp
  src/v20180328/model/AccountDetail.cpp
  src/v20180328/model/ModifyDatabaseMdfResponse.cpp
  src/v20180328/model/CreateBackupResponse.cpp
  src/v20180328/model/DBInstance.cpp
  src/v20180328/model/DescribeProductConfigResponse.cpp
  src/v20180328/model/DescribeRollbackTimeRequest.cpp
  src/v20180328/model/DBTDEEncrypt.cpp
  src/v20180328/model/DescribeUploadBackupInfoResponse.cpp
  src/v20180328/model/CreateMigrationRequest.cpp
  src/v20180328/model/DescribeDBInstanceInterRequest.cpp
  src/v20180328/model/InterInstance.cpp
  src/v20180328/model/CreateBasicDBInstancesRequest.cpp
  src/v20180328/model/ModifyDBNameResponse.cpp
  src/v20180328/model/CosUploadBackupFile.cpp
  src/v20180328/model/ModifyDBNameRequest.cpp
  src/v20180328/model/StartBackupMigrationRequest.cpp
  src/v20180328/model/DescribeDBInstancesAttributeResponse.cpp
  src/v20180328/model/Backup.cpp
  src/v20180328/model/DescribeRestoreTimeRangeResponse.cpp
  src/v20180328/model/DescribeBackupCommandRequest.cpp
  src/v20180328/model/AccountRemark.cpp
  src/v20180328/model/ModifyDatabaseCDCResponse.cpp
  src/v20180328/model/ModifyDBInstanceNameResponse.cpp
  src/v20180328/model/CreateIncrementalMigrationResponse.cpp
  src/v20180328/model/RunMigrationResponse.cpp
  src/v20180328/model/AccountPrivilegeModifyInfo.cpp
  src/v20180328/model/DescribeBackupMigrationResponse.cpp
  src/v20180328/model/AccountCreateInfo.cpp
  src/v20180328/model/StartInstanceXEventRequest.cpp
  src/v20180328/model/DBPrivilege.cpp
  src/v20180328/model/FileAction.cpp
  src/v20180328/model/DescribeOrdersRequest.cpp
  src/v20180328/model/DescribeBackupsResponse.cpp
  src/v20180328/model/ResourceTag.cpp
  src/v20180328/model/CreateBackupMigrationResponse.cpp
  src/v20180328/model/RecycleDBInstanceResponse.cpp
  src/v20180328/model/DeleteAccountRequest.cpp
  src/v20180328/model/DeleteBackupMigrationResponse.cpp
  src/v20180328/model/CreateBackupRequest.cpp
  src/v20180328/model/DescribeDBsNormalRequest.cpp
  src/v20180328/model/BackupFile.cpp
  src/v20180328/model/ModifyAccountRemarkRequest.cpp
  src/v20180328/model/ModifyIncrementalMigrationResponse.cpp
  src/v20180328/model/OldVip.cpp
  src/v20180328/model/MigrationAction.cpp
  src/v20180328/model/InquiryPriceUpgradeDBInstanceResponse.cpp
  src/v20180328/model/CloneDBRequest.cpp
  src/v20180328/model/DescribeMigrationDetailResponse.cpp
  src/v20180328/model/UpgradeDBInstanceResponse.cpp
  src/v20180328/model/ModifyMigrationRequest.cpp
  src/v20180328/model/CrossBackupAddr.cpp
  src/v20180328/model/Parameter.cpp
  src/v20180328/model/CreateAccountResponse.cpp
  src/v20180328/model/DescribeBackupUploadSizeRequest.cpp
  src/v20180328/model/DeleteDBResponse.cpp
  src/v20180328/model/CreateDBResponse.cpp
  src/v20180328/model/CloseInterCommunicationResponse.cpp
  src/v20180328/model/RestartDBInstanceResponse.cpp
  src/v20180328/model/CreateBusinessDBInstancesRequest.cpp
  src/v20180328/model/DescribeDBInstancesResponse.cpp
  src/v20180328/model/DescribeSlowlogsResponse.cpp
  src/v20180328/model/DBDetail.cpp
  src/v20180328/model/ResetAccountPasswordRequest.cpp
  src/v20180328/model/DescribeInstanceParamsResponse.cpp
  src/v20180328/model/ModifyDReadableResponse.cpp
  src/v20180328/model/ModifyDBInstanceProjectRequest.cpp
  src/v20180328/model/SlowLog.cpp
  src/v20180328/model/DBRenameRes.cpp
  src/v20180328/model/TerminateDBInstanceResponse.cpp
  src/v20180328/model/DescribeUploadBackupInfoRequest.cpp
  src/v20180328/model/DescribeAccountsResponse.cpp
  src/v20180328/model/RollbackInstanceRequest.cpp
  src/v20180328/model/DescribeDBInstancesAttributeRequest.cpp
  src/v20180328/model/DrReadableInfo.cpp
  src/v20180328/model/RestoreInstanceResponse.cpp
  src/v20180328/model/DescribeBackupCommandResponse.cpp
  src/v20180328/model/ModifyDatabaseCTResponse.cpp
  src/v20180328/model/CreateCloudDBInstancesRequest.cpp
  src/v20180328/model/SlowlogInfo.cpp
  src/v20180328/model/DescribeIncrementalMigrationResponse.cpp
  src/v20180328/model/ModifyDBRemarkResponse.cpp
  src/v20180328/model/MigrateTarget.cpp
  src/v20180328/model/CreateDBInstancesResponse.cpp
  src/v20180328/model/ModifyBackupMigrationRequest.cpp
  src/v20180328/model/DeleteAccountResponse.cpp
  src/v20180328/model/DescribeDBCharsetsResponse.cpp
  )

set(sqlserver_include
    include/tencentcloud/sqlserver
  )

add_library(sqlserver ${LIB_TYPE}
  ${sqlserver_public_header}
  ${sqlserver_public_header_model}
  ${sqlserver_src})

set_target_properties(sqlserver
  PROPERTIES
  LINKER_LANGUAGE CXX
  ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
  LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
  OUTPUT_NAME ${TARGET_OUTPUT_NAME_PREFIX}sqlserver
  )

target_include_directories(sqlserver
  PRIVATE include
    ${CMAKE_SOURCE_DIR}/core/include
  )
target_link_libraries(sqlserver
  core)

#install(FILES ${sqlserver_public_header}
#  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/tencentcloud/sqlserver/v20180328)
#install(FILES ${sqlserver_public_header_model}
#  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/tencentcloud/sqlserver/v20180328/model)
install(DIRECTORY ${sqlserver_include}
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/tencentcloud)

install(TARGETS sqlserver
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
  )
